--- a/COVID-19/Gemfile
+++ b/COVID-19/Gemfile
@@ -6,11 +6,17 @@ ruby '2.6.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.4', '>= 5.2.4.2'
 # Use postgresql as the database for Active Record
+gem 'httparty', '~> 0.17.3'
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 3.11'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
+# Use Bootstrap4
+gem 'bootstrap', '~> 4.3.1'
+# Use jQuery
+gem 'jquery-rails', '~> 4.3', '>= 4.3.3'
+gem 'devise'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
